# databricks-code-search

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  alembic.ini  config.yaml  databricks.yml  pyproject.toml
.claude/skills/autoplan/: SKILL.md
.github/workflows/: ci-lakebase.yml  ci.yml
app/: AGENTS.md  app.yaml  config.py  embed.py  main.py  requirements.txt  service.py
app/alembic/: AGENTS.md  env.py
app/alembic/versions/: 0001_initial_core_schema.py  0002_index_semantics_version.py  0003_multi_branch.py  0004_semantic_chunks.py  0005_reference_edges.py
app/alembic/versions_semantic/: 0002sem_semantic_chunks.py
app/db/: AGENTS.md  __init__.py  client.py  grants.py  models.py  semantic.py
app/query/: AGENTS.md  __init__.py  compiler.py  parser.py
app/search/: AGENTS.md  errors.py  grep.py  references.py  semantic.py  symbols.py
docs/: AGENTS.md
docs/diagrams/: AGENTS.md  architecture.dot  deploy-pipeline.dot  overall-architecture.dot
docs/runbooks/: AGENTS.md  ci-lakebase.md  indexing-parallelism.md  multi-branch.md  reference-edges.md  semantic-enablement.md  webui.md
indexer/: AGENTS.md  branches.py  chunk_store.py  embed.py  fetch.py  hashing.py  job.py  languages.py  parse.py  repo_config.py  resolve.py  store.py  symbols.py
resources/: AGENTS.md  app.yml  job.yml  lakebase.yml  secret_scope.yml  webui.yml
scripts/: AGENTS.md  ci_branch.py  deploy.sh  measure_reference_resolution.py  migrate.py  smoke.py
tests/: AGENTS.md
tests/integration/: AGENTS.md  test_commit_search.py  test_content_sha_parity.py  test_db_client.py  test_grep.py  test_job_reconcile.py  test_job_resource_resolved.py  test_mcp_server.py  test_migrate_post_semantic_core_head.py  test_migrations.py  test_query_compiler.py  test_reconcile.py  test_references.py  test_semantic_rrf.py  test_service.py  test_store.py  test_store_chunk_writer.py  test_symbols_search.py  test_webui_graph_parity.py  test_webui_semantic.py
tests/integration/fixtures/versions_semantic_standin/: 0002semtest_standin_chunks.py
tests/unit/: AGENTS.md  test_branches.py  test_chunk_store.py  test_chunking.py  test_ci_branch.py  test_db_client.py  test_edges.py  test_embed.py  test_fetch.py  test_grants.py  test_grep.py  test_job.py  test_job_redaction.py  test_job_resource.py  test_languages.py  test_main.py  test_measure_reference_resolution.py  test_migrate_semantic_ack.py  test_migration_source.py  test_migration_source_semantic.py  test_parse.py  test_placeholder.py  test_query_compiler.py  test_query_corpus_parity.py  test_query_parser.py  test_reconcile.py  test_reference_edge_model.py  test_references.py  test_repo_config.py  test_resolve.py  test_search_errors.py  test_semantic.py  test_semantic_schema.py  test_semantics_version_tripwire.py  test_service.py  test_smoke.py  test_store_chunk_writer.py  test_symbols.py  test_symbols_search.py  test_webui_main.py
webui/: AGENTS.md  app.yaml  main.py  pyproject.toml  requirements.txt
webui/frontend/: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
webui/frontend/src/: AGENTS.md  App.tsx  index.css  main.tsx  router.test.ts  router.ts  theme.ts
webui/frontend/src/api/: client.ts
webui/frontend/src/components/: Banner.tsx  ChunkCard.test.tsx  ChunkCard.tsx  CodeBlock.tsx  FilterChips.test.tsx  FilterChips.tsx  ResultsList.test.tsx  ResultsList.tsx  SiteList.test.tsx  SiteList.tsx  SyntaxHelp.tsx  ThemeToggle.tsx
webui/frontend/src/pages/: FilePage.tsx  GraphPage.test.tsx  GraphPage.tsx  ReposPage.tsx  SearchPage.tsx  SemanticPage.test.tsx  SemanticPage.tsx
webui/frontend/src/utils/: byteRanges.test.ts  byteRanges.ts  chunkAnchor.test.ts  chunkAnchor.ts  queryModel.corpus.json  queryModel.test.ts  queryModel.ts  searchReducer.test.ts  searchReducer.ts
