[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-code-search"
version = "0.1.0"
description = "Agent-facing code search service on Databricks (MCP server + indexing job over Lakebase Postgres)."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.20",
    "anyio",
    "uvicorn[standard]",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pgvector>=0.3",
    "httpx>=0.27",
    "databricks-sdk>=0.81.0",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack",
    "pydantic-settings",
]

[project.scripts]
code-search-index = "indexer.job:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "httpx",
    "asgi-lifespan",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "indexer*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "unit: Pure unit tests with no external dependencies",
    "integration: Tests that exercise multiple modules together (still mocked at boundaries)",
    "e2e: In-process streamable-HTTP tests driving the real ASGI app (CI Postgres via PGHOST)",
    "observability: Logging choke-point / fault-not-swallowed / saturation-signal tests",
]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
files = ["app", "indexer"]
# Digit-named migration scripts (e.g. app/alembic/versions/0001_*.py) are not
# importable module paths and are exercised by tests, not type-checked.
exclude = ["^app/alembic/versions/"]

[[tool.mypy.overrides]]
module = [
    "psycopg.*",
    "pgvector.*",
    "tree_sitter.*",
    "tree_sitter_language_pack.*",
    "databricks.*",
    "alembic.*",
    "mcp.*",
    "uvicorn.*",
]
ignore_missing_imports = true
